clusters/infrastructure/prod/security/vaultwarden/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    goldilocks.fairwinds.com/enabled: "true"
